// Copyright (c) 2021 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package daml_lf_dev;

option java_package = "com.daml.daml_lf_dev";
option csharp_namespace = "Com.Daml.Daml_Lf_Dev.DamlLf";

import "com/daml/daml_lf_dev/daml_lf_1.proto";

message ArchivePayload {
  // this is number 3 for historical reasons -- we had
  // Daml-LF v0 and v1 before we had minor versions.
  string minor = 3;
  reserved 9999; // for the removed "dev" major version

  reserved 1; // was daml_lf_0

  oneof Sum {
    daml_lf_1.Package daml_lf_1 = 2;

    // lf_2 = 4, lf_3 = 5, etc
  }
}
